04-basic-rollout/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: basic-rollout
spec:
  replicas: 5
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause: {duration: 10}
        - setWeight: 60
        - pause: {duration: 10}
        - setWeight: 80
        - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: basic-rollout
  template:
    metadata:
      labels:
        app.kubernetes.io/name: basic-rollout
    spec:
      containers:
        - image: 211125550721.dkr.ecr.eu-west-1.amazonaws.com/rollouts-demo:red
          imagePullPolicy: Always
          name: basic-rollout
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            #            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 5
            httpGet:
              port: http
              path: /health/liveness
          readinessProbe:
            #            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 5
            httpGet:
              port: http
              path: /health/readiness
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
              ephemeral-storage: 2Gi
            limits:
              cpu: 200m
              ephemeral-storage: 2Gi
