04-basic-rollout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-rollout
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: basic-rollout
